<resources>
    <string name="app_name">New York Times</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="search">Search</string>
    <string name="hint">Enter keywords here</string>
    <string name="title_activity_article">"New York Times"</string>
    <string name="textDate">Begin Date</string>
    <string name="textOrder">Sort Order</string>
    <string name="textCat">Categories</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="opinion">Opinion</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="style">Style</string>
    <string name="tech">Tech</string>
    <string name="travel">Travel</string>
    <string name="save">Save</string>

</resources>
